--- a/WEB/manifest.json
+++ b/WEB/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "LoveMarket",
   "short_name": "LoveMarket",
+  "start_url": "./?utm_source=homescreen",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
