--- a/WEB/package.json
+++ b/WEB/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords":[
+    "echyzen",
+    "server",
+    "web-push"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bdtren/DTTV.UIT.CNPMChuyenSau.BanDoNguoiYeuCu.git"
