--- a/WEB/manifest.json
+++ b/WEB/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "LoveMarket",
   "short_name": "LoveMarket",
-  "start_url": "./?utm_source=homescreen",
+  "start_url": "./index.php",
   "theme_color": "#2196f3",
   "background_color": "#2196f3",
   "display": "standalone",
